<resources>
    <string name="app_name">HTML_parsel</string>
    <string name="start_activity">StartActivity</string>
    <string name="edit_product">What do you need?</string>
    <string name="start_text">Hello!</string>
    <string name="start">Start search!</string>
    <string name="stop">Stop</string>
    <string name="message_text">Edit your favorite searchProduct for search</string>
    <string name="enter_search">Edit searchProduct for search</string>
    <string name="product_price">Edit pice</string>
    <string name="button_search">Search!</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="btn_cancel">Cancel</string>
    <string name="setting_activity">SettingActivity</string>
    <string name="btn_skip">Skip</string>
    <string name="str_search_product_full_name">What to look for? (field not null)</string>
    <string name="str_search_product_category">Set category (or do not write anything)</string>
    <string name="str_low_price">low-price</string>
    <string name="str_high_price">high-price</string>
    <string name="str_for_set_price">Set product price (digits) or do not write anything</string>
    <string name="str_search_product_color">Set color (or do not write anything)</string>
    <string name="str_search_product_date">Date added (or do not write anything)</string>
    <string name="btn_save">Save</string>
    <string name="str_search_product_website">Set website for search</string>
    <string name="str_user_added">Added by you:</string>
    <string name="str_when_you_added">Added date:</string>
    <string name="str_chosen_web_site">search in:</string>
    <string name="str_dialog_delete">Are you sure?</string>
    <string name="str_are_you_sure_start">Do you want to start a search?</string>
    <string name="str_delete">Delete</string>
    <string name="str_help">Help</string>
    <string name="str_exit">Exit</string>
    <string name="str_support">Support</string>
    <string name="str_creator">by Dn160493Poa</string>
    <string name="str_help_full_text">Рыба, она же Скелет, она же Калька...  Где взять Рыбу для основных элементов - станки, продукция, заказ, инвоисе, цена? Интересует - с базовыми взаимосвязями - из заказа получить инвоисы, суммы и т.п. с возможностью обратной навигации от инвойса к заказам.  Бо, задолбало - в наличии уже более полусотни определений заказов, штук двадцать инвоисов, кучка всяких промежуточных моментов и каждое определение чем-то отличается - никакой унификации... Хочется не думать над тем, какой именно из вариантов используется в конкретном месте - взять что-то однозначное и от него ползать по связанным элементам.</string>
    <string name="str_exit_title">Are you sure you want to quit the application?</string>
    <string name="str_ok">OK</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_null_price">no value</string>
    <string name="str_start_search">Start</string>
    <string name="str_are_you_sure_stop">Do you want to stop the search?</string>

    <string-array name="arr_languages">
        <item>ENG</item>
        <item>RU</item>
    </string-array>

    <string-array name="category">
        <item>Set category (or do not write anything)</item>
        <item>Electronics, Computers &amp; Office</item>
    </string-array>

    <string-array name="WebSites">
        <item>amazon.com</item>
    </string-array>

    <string-array name="Colors">
        <item>Set color (or do not write anything)</item>
        <item>Red</item>
        <item>White</item>
        <item>Dark</item>
    </string-array>

    <string-array name="SearchDates">
        <item>Set date added (or do not write anything)</item>
        <item>For today</item>
        <item>In 3 days</item>
        <item>During the week</item>
        <item>Per month</item>
        <item>During all this time</item>
    </string-array>

    <string-array name="Electronics_Computers_or_Office">
        <item>Set under-category (or do not write anything)</item>
        <item>"TV &amp; Video"</item>
        <item>Home Audio &amp; Theater</item>
        <item>Camera, Photo &amp; Video</item>
        <item>Cell Phones &amp; Accessories</item>
        <item>Headphones</item>
        <item>Video Games</item>
        <item>Bluetooth &amp; Wireless Speakers</item>
        <item>Car Electronics</item>
        <item>Musical Instruments</item>
        <item>Wearable Technology</item>
        <item>Electronics Showcase</item>
        <item>Computers &amp; Tablets</item>
        <item>Monitors</item>
        <item>Accessories</item>
        <item>Networking</item>
        <item>Drives &amp; Storage</item>
        <item>Computer Parts &amp; Components</item>
        <item>Software</item>
        <item>Printers &amp; Ink</item>
        <item>Office &amp; School Supplies</item>
        <item>Trade In Your Electronics</item>
    </string-array>

</resources>
